# DSCSModLoader

./: .clang-format  CMakeLists.txt  README.MD  THIRD-PARTY-NOTICE  config.toml
.github/: FUNDING.yml
.github/workflows/: build.yml
DSCSModLoader/: CMakeLists.txt  DSCSModLoader.cpp  DSCSModLoader.h  GameInterface.cpp  squirrel.cpp  utils.cpp
include/dscs/: AppContext.h  DigisterMap.h  GameContext.h  GameInterface.h  GameSaveData.h  ResourceManager.h  Savegame.h  SoundStruct.h
include/dscs/GameContext/: Context0x18.h  Context0x58.h  DigiFarm.h  Digiline.h  DigimonContext.h  Inventory.h  OnlineBattleBox.h  Player.h  Quest.h  Settings.h  UserStats.h
include/dscs/lib/: map.h  string.h  vector.h  xtree.h
include/modloader/: FlagTable.h  WorkTable.h  cosave.h  plugin.h  squirrel.h  utils.h
src/: CoSave.cpp  CoSave.h  CoSaveExtension.cpp  CoSaveExtension.hpp  DSCSModLoader.cpp  DSCSModLoader.h  GameInterface.cpp  ScriptExtension.cpp  ScriptExtension.h  SquirrelAway.cpp  squirrel.cpp  utils.cpp
